@@ -281,6 +281,7 @@ $wgLanguageNamesEn =& $wgLanguageNames;
 	MAG_RAW                  => array( 0,    'RAW:'                   ),
 	MAG_DISPLAYTITLE         => array( 1,    'DISPLAYTITLE'           ),
 	MAG_RAWSUFFIX			 => array( 1,	 'R'					  ),
+	MAG_NEWSECTIONLINK		 => array( 1,	 '__NEWSECTIONLINK__'	  ),
 );
 
 if (!$wgCachedMessageArrays) {
